--- a/Join/View/FindIdeas/FriendProjectCell.xib
+++ b/Join/View/FindIdeas/FriendProjectCell.xib
@@ -20,6 +20,7 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.on.rectangle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="EAR-br-0CJ">
                         <rect key="frame" x="0.0" y="0.5" width="100" height="139"/>
+                        <color key="tintColor" name="Gray3"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="18v-nq-9vB">
                         <rect key="frame" x="8" y="115" width="84" height="17"/>
@@ -48,6 +49,9 @@
     </objects>
     <resources>
         <image name="photo.on.rectangle.fill" catalog="system" width="128" height="97"/>
+        <namedColor name="Gray3">
+            <color red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Gray5">
             <color red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
