--- a/Join/View/Personal.storyboard
+++ b/Join/View/Personal.storyboard
@@ -298,6 +298,36 @@
             </objects>
             <point key="canvasLocation" x="4519" y="909"/>
         </scene>
+        <!--Personal Info Selection View Controller-->
+        <scene sceneID="fST-MP-yPv">
+            <objects>
+                <viewController storyboardIdentifier="PersonalInfoSelectionViewController" id="YsE-Zt-4z1" customClass="PersonalInfoSelectionViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="85i-NE-J5g">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="7Kb-sX-3Ii">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="RZW-IQ-S3B"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7Kb-sX-3Ii" firstAttribute="top" secondItem="85i-NE-J5g" secondAttribute="top" id="2VN-Lq-5j0"/>
+                            <constraint firstAttribute="bottom" secondItem="7Kb-sX-3Ii" secondAttribute="bottom" id="B0F-Lr-PZr"/>
+                            <constraint firstItem="RZW-IQ-S3B" firstAttribute="trailing" secondItem="7Kb-sX-3Ii" secondAttribute="trailing" id="Xrq-zH-KJv"/>
+                            <constraint firstItem="7Kb-sX-3Ii" firstAttribute="leading" secondItem="RZW-IQ-S3B" secondAttribute="leading" id="cje-cP-amC"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="7Kb-sX-3Ii" id="qRk-nU-4Y6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MuQ-ZB-BWG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5336" y="909"/>
+        </scene>
         <!--Item-->
         <scene sceneID="BFG-DT-NJj">
             <objects>
