--- a/Join/View/FindIdeas/RecommendedProjectCell.xib
+++ b/Join/View/FindIdeas/RecommendedProjectCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -11,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FriendProjectCell" customModule="Join" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RecommendedProjectCell" customModule="Join" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="100" height="140"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -22,11 +21,25 @@
                         <rect key="frame" x="0.0" y="0.5" width="100" height="139"/>
                         <color key="tintColor" name="Gray3"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="18v-nq-9vB">
-                        <rect key="frame" x="8" y="112.5" width="84" height="19.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="18v-nq-9vB" customClass="PaddingableLabel" customModule="Join" customModuleProvider="target">
+                        <rect key="frame" x="8" y="112.5" width="44" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="16"/>
                         <color key="textColor" name="Gray5"/>
                         <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="paddingLeft">
+                                <real key="value" value="4"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="paddingRight">
+                                <real key="value" value="4"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="paddingTop">
+                                <real key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="paddingBottom">
+                                <real key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </label>
                 </subviews>
             </view>
@@ -35,7 +48,7 @@
                 <constraint firstItem="18v-nq-9vB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="6Ct-pD-cqd"/>
                 <constraint firstAttribute="bottom" secondItem="EAR-br-0CJ" secondAttribute="bottom" id="Itz-jG-RK4"/>
                 <constraint firstItem="EAR-br-0CJ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Pi1-dy-o7M"/>
-                <constraint firstAttribute="trailing" secondItem="18v-nq-9vB" secondAttribute="trailing" constant="8" id="Tfu-Nx-hrO"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="18v-nq-9vB" secondAttribute="trailing" constant="8" id="Tfu-Nx-hrO"/>
                 <constraint firstAttribute="trailing" secondItem="EAR-br-0CJ" secondAttribute="trailing" id="VRL-TR-s9S"/>
                 <constraint firstItem="EAR-br-0CJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="h5m-ds-D9E"/>
                 <constraint firstAttribute="bottom" secondItem="18v-nq-9vB" secondAttribute="bottom" constant="8" id="s9Z-MQ-Hkh"/>
@@ -53,7 +66,7 @@
             <color red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Gray5">
-            <color red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
