--- a/Join/View/FindIdeas/IdeaCell.xib
+++ b/Join/View/FindIdeas/IdeaCell.xib
@@ -18,8 +18,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="414" height="159"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="標題" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5U-t7-mMv">
-                        <rect key="frame" x="16" y="20" width="313" height="24"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="標題" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5U-t7-mMv">
+                        <rect key="frame" x="16" y="20" width="313" height="21.5"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                         <color key="textColor" name="Blue1"/>
                         <nil key="highlightedColor"/>
@@ -132,7 +132,7 @@
                             </imageView>
                         </subviews>
                     </stackView>
-                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FUD-oX-wSo">
+                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FUD-oX-wSo">
                         <rect key="frame" x="345" y="20" width="53" height="20"/>
                         <color key="backgroundColor" name="Red"/>
                         <constraints>
@@ -145,10 +145,10 @@
                         <state key="normal" title="999+"/>
                     </button>
                     <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="psY-SF-vHK">
-                        <rect key="frame" x="16" y="52" width="57.5" height="8"/>
+                        <rect key="frame" x="16" y="49.5" width="57.5" height="10.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gdD-ud-Eq0" customClass="PaddingableLabel" customModule="Join" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="27.5" height="8"/>
+                                <rect key="frame" x="0.0" y="0.0" width="27.5" height="10.5"/>
                                 <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="9"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -168,7 +168,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="252" image="Icons_24px_More" translatesAutoresizingMaskIntoConstraints="NO" id="Yso-Ks-wDf">
-                                <rect key="frame" x="33.5" y="0.0" width="24" height="8"/>
+                                <rect key="frame" x="33.5" y="0.0" width="24" height="10.5"/>
                                 <color key="tintColor" name="Gray4"/>
                             </imageView>
                         </subviews>
@@ -179,6 +179,7 @@
             <constraints>
                 <constraint firstItem="psY-SF-vHK" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="f5U-t7-mMv" secondAttribute="trailing" id="1mu-Ez-WC3"/>
                 <constraint firstAttribute="bottom" secondItem="tib-H7-9w9" secondAttribute="bottom" constant="20" id="CVy-DW-9Nl"/>
+                <constraint firstItem="FUD-oX-wSo" firstAttribute="firstBaseline" secondItem="f5U-t7-mMv" secondAttribute="firstBaseline" id="OpU-H0-wRw"/>
                 <constraint firstAttribute="trailing" secondItem="FUD-oX-wSo" secondAttribute="trailing" constant="16" id="Rg5-50-fHW"/>
                 <constraint firstAttribute="trailing" secondItem="tib-H7-9w9" secondAttribute="trailing" constant="16" id="TZq-f0-HXg"/>
                 <constraint firstItem="FUD-oX-wSo" firstAttribute="leading" secondItem="f5U-t7-mMv" secondAttribute="trailing" constant="16" id="fFV-bH-YI6"/>
